@@ -2,8 +2,12 @@ package zollerngalaxy.blocks;
 
 import net.minecraft.block.SoundType;
 import net.minecraft.block.material.Material;
+import net.minecraft.block.state.IBlockState;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.World;
 import zollerngalaxy.core.enums.EnumBlockType;
 import zollerngalaxy.core.enums.EnumHarvestLevelZG;
+import zollerngalaxy.core.enums.EnumHarvestToolZG;
 
 public class ZGBlockDirt extends ZGBlockBase {
 	
@@ -11,12 +15,26 @@ public class ZGBlockDirt extends ZGBlockBase {
 		super(blockName, hardResist);
 		this.setMaterial(Material.GROUND);
 		this.setSoundType(SoundType.GROUND);
-		this.setBlockHarvestLevel("shovel", EnumHarvestLevelZG.IRON.getHarvestLevel());
 		this.setBlockType(EnumBlockType.DIRT);
 	}
 	
 	public ZGBlockDirt(String blockName) {
 		this(blockName, 0.9F);
+	}
+	
+	@Override
+	public int getHarvestLevel(IBlockState state) {
+		return EnumHarvestLevelZG.IRON.getHarvestLevel();
+	}
+	
+	@Override
+	public String getHarvestTool(IBlockState state) {
+		return EnumHarvestToolZG.SHOVEL.getHarvestTool();
+	}
+	
+	@Override
+	public boolean isTerraformable(World world, BlockPos pos) {
+		return false;
 	}
 	
 }
